# veritas-zk

./: .gitignore  BUILD_BRIEF.md  CHANGELOG.md  CI_FIX_NOTES.md  CLAUDE.md  CLEAN_HISTORY_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  DORAHACKS_PAGE_INFO.md  DORAHACKS_SUBMISSION.md  Dockerfile  ERIC_DORAHACKS_CHECKLIST.md  ERIC_SUBMIT_GUIDE.md  PRE_SUBMIT_CHECKLIST.md  README.md  README_AUDIT.txt  SECURITY.md  SIZE_REPORT.md  SUBMISSION.md  SUBMISSION_FORM_FIELDS.md  SUBMISSION_PACKAGE.md  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
circuits/: AgeGte.circom  JurisdictionAllowed.circom  README.md  ValidOwner.circom  package-lock.json  package.json  test_inputs.json
docs/: architecture-diagram.txt  demo.html
ptau/: ptau_4.ptau
python/: demo.sh  issuer.py  proof_gen.py  requirements.txt  signed_credential.json  verify.py  witness_gen.py
scripts/: build_all_zkeys.sh  build_circuit.sh  clean-history.sh  demo.sh  deploy_testnet.sh  gen_test_inputs.js  proof_to_bytes.js  verify_all.sh  zk_helpers.js
soroban/: README.md
soroban/contracts/veritas-verifier/: Cargo.toml
soroban/contracts/veritas-verifier/src/: contract.rs  groth16.rs  lib.rs  spec.rs
soroban/contracts/veritas-verifier/test_snapshots/: age_gte_verifies_on_chain.1.json  jurisdiction_allowed_verifies_on_chain.1.json  valid_owner_double_spend_protection.1.json
soroban/contracts/veritas-verifier/tests/: sandbox.rs  verify_real.rs  zk_lifecycle.rs
(+51 files in other folders)
