[package]
name = "veritas-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Veritas — on-chain Groth16 credential verifier for Soroban (Stellar)."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
# no_std-friendly BN254 / Groth16 verify core (the same code runs in host tests).
ark-bn254 = { version = "0.4", default-features = false, features = ["curve", "scalar_field"] }
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
# Soroban contract SDK (compiles for both host tests and wasm32v1-none).
# The `alloc` feature is REQUIRED: it supplies the wasm global_allocator
# (bump pointer) + panic handler that arkworks / Vec depend on.
soroban-sdk = { version = "22", features = ["alloc"] }

[dev-dependencies]
serde_json = "1"
soroban-sdk = { version = "22", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
